tests/valid/definite/BoolReturn_Valid_1.whiley
bool pred():
    return false

void System::main([string] args):
    print str(pred())